monitoring/cadvisor/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cadvisor
  namespace: monitoring
  labels:
    app.kubernetes.io/name: cadvisor
    cert-manager.io/issuer: "issuer"
    cert-manager.io/common-name: "cadvisor.dev.local"
spec:
  ingressClassName: nginx
  rules:
    - host: cadvisor.dev.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cadvisor
                port:
                  number: 8080
